[package]
edition = "2018"
name = "napi-test"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "1", features = ["serde-json"] }
napi-derive = "1"
backtrace = "0.3"
anyhow = "1.0"
path-clean = "0.1"
serde = "1"
serde_json = "1"
swc = "0.33"
swc_atoms = "0.2.6"
swc_common = { version = "0.11.1", features = ["tty-emitter", "sourcemap"] }
swc_node_base = "0.2.0"
swc_ecmascript = { version = "0.50.0", features = ["codegen", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_ecma_preset_env = "0.31.0"
log = "0.4.14"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
